# local-quiz-app

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: requirements.md  rough-requirements.md  technical-design.md
src/: App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: sample-quiz-pack.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: history.rs  mod.rs  quiz_pack.rs  settings.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/models/: app_settings.rs  history.rs  mod.rs  question.rs  quiz_pack.rs
src-tauri/src/repositories/: history_repo.rs  mod.rs  question_repo.rs  quiz_pack_repo.rs  settings_repo.rs
src-tauri/src/services/: export_service.rs  history_service.rs  import_service.rs  mod.rs  save_service.rs  settings_service.rs  validation_service.rs
src/hooks/: useCountUp.test.ts  useCountUp.ts  useHistoryData.test.ts  useHistoryData.ts  usePackFilter.test.ts  usePackFilter.ts  useQuizPacks.test.ts  useQuizPacks.ts  useQuizSession.ts  useQuizSessionActions.test.ts  useQuizSessionActions.ts  useTheme.test.ts  useTheme.ts
src/lib/: animation.test.ts  animation.ts  commands.test.ts  commands.ts  formatAnswer.test.ts  formatAnswer.ts  judge.test.ts  judge.ts  keyboard.ts  sampleQuizPack.test.ts  sessions.test.ts  sessions.ts  types.test.ts  types.ts
src/pages/: HistoryPage.test.tsx  (+9 more)
(+34 files in other folders)
